--- a/public/CV/index.html
+++ b/public/CV/index.html
@@ -126,7 +126,7 @@
 </svg>
 </a>
 &nbsp;&nbsp;
-<a href="mailto:mail@mail.com" target="_blank" rel="me" title="Email" referrerpolicy="no-referrer">
+<a href="mailto:ziyanzou@link.cuhk.edu.hk" target="_blank" rel="me" title="Email" referrerpolicy="no-referrer">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
 	stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 	<path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
