--- a/public/index.html
+++ b/public/index.html
@@ -103,12 +103,12 @@
 	title="Thanks to Christina @ wocintechchat.com for this photo." width="200px" 
 	alt="Author's picture or avatar or logo"/>
   <ul>
-    <li class="intro-quote">Women, they have minds, and they have souls, as well as just hearts. And they’ve got ambition, and they’ve got talent, as well as just beauty. I’m so sick of people saying that love is all a woman is fit for. -― Louisa May Alcott, Little Women</li>
+    <li class="intro-quote">Women, they have minds, and they have souls, as well as just hearts. And they’ve got ambition, and they’ve got talent, as well as just beauty. I’m so sick of people saying that love is all a woman is fit for. -- Louisa May Alcott, Little Women</li>
   </ul>
   
   <p></p>
 </div>
-<div class="nav"><a href="http://localhost:1313/about">About me</a><a href="http://localhost:1313/CV">CV</a><a href="http://localhost:1313/post/">Posts</a>
+<div class="nav"><a href="http://localhost:1313/about">About me</a><a href="http://localhost:1313/post/">Posts</a>
 </div>
 
 <footer id="footer">
