--- a/public/about/index.html
+++ b/public/about/index.html
@@ -12,8 +12,8 @@ EDUCATION BACKGROUND
 University of Alberta &amp;mdash; Doctor of Philosophy in Linguistics Sep 2024 –
 Chinese University of Hong Kong &amp;mdash; Master of Arts Sep 2021 – Jul 2022 Major: Chinese linguistics and language acquisition
 University of Science &amp;amp; Technology Beijing &amp;mdash; Bachelor of Law Sep 2016– Jun 2020 Major: Social Work
-PRESENTATION
-Ziyan ZOU &amp;amp; YOU Shuxiang 2023. How Gender Affects Immigrants Accents variation – An acoustic study on Hunan immigrants in Beijing." />
+PUBLICATION
+Ziyan ZOU, &amp;amp; Shuxiang YOU. 2023. How Gender Affects Immigrants Accents variation – An acoustic study on Hunan immigrants in Beijing." />
     <meta property="og:image" content="http://localhost:1313/IMG_1242.jpg" />
     <meta name="keywords"
           content="" />
@@ -118,9 +118,13 @@ Ziyan ZOU &amp;amp; YOU Shuxiang 2023. How Gender Affects Immigrants Accents var
 <p><strong>University of Science &amp; Technology Beijing &mdash; Bachelor of Law</strong> <em>Sep 2016– Jun 2020 Major: Social Work</em></p>
 </li>
 </ul>
-<p><strong>PRESENTATION</strong></p>
+<p><strong>PUBLICATION</strong></p>
 <ul>
-<li><strong>Ziyan ZOU</strong> &amp; YOU Shuxiang 2023. How Gender Affects Immigrants Accents variation – An acoustic study on Hunan immigrants in Beijing. <em>International Congress of Phonetics Sciences 2023</em></li>
+<li><strong>Ziyan ZOU</strong>, &amp; Shuxiang YOU. 2023. How Gender Affects Immigrants Accents variation – An acoustic study on Hunan immigrants in Beijing. In <em>Proceedings of International Congress of Phonetic Sciences 2023</em>, 3646-3651. Prague, Czech.</li>
+</ul>
+<p><strong>POSTER &amp; PRESENTATION</strong></p>
+<ul>
+<li><strong>Ziyan ZOU</strong> &amp; Shuxiang YOU. 2023. How Gender Affects Immigrants Accents variation – An acoustic study on Hunan immigrants in Beijing. <em>International Congress of Phonetic Sciences 2023</em> Prague, Czech.</li>
 </ul>
 <p><strong>SKILLS</strong></p>
 <ul>
@@ -156,7 +160,7 @@ Ziyan ZOU &amp;amp; YOU Shuxiang 2023. How Gender Affects Immigrants Accents var
 <p><strong>WORK EXPERIENCE</strong></p>
 <ul>
 <li>
-<p><strong>International SOS Raffles Medical Co., Ltd.,</strong> Patients Service ofMental Health <em>Oct 2020-JAN 2021</em></p>
+<p><strong>International SOS Raffles Medical Co., Ltd.,</strong> Patients Service of Mental Health <em>Oct 2020-JAN 2021</em></p>
 <ul>
 <li>Handle clients’ appointments booking</li>
 <li>Insurance Reimbursement</li>
@@ -165,10 +169,10 @@ Ziyan ZOU &amp;amp; YOU Shuxiang 2023. How Gender Affects Immigrants Accents var
 <li>
 <p><strong>Beijing Gloriousway Consulting Management Co., Ltd.,</strong> Intern Headhunter <em>Jul 2018- Sep 2018</em></p>
 <ul>
-<li>Used Linkin and Liepin Website to find suitable candidates for clients, mainly focused on the direction of advertising and analysis industry</li>
+<li>Used Linkedin and Liepin Website to find suitable candidates for clients, mainly focused on the direction of advertising and analysis industry</li>
 <li>Candidates communication and assistance</li>
 <li>Candidates resume modification</li>
-<li>Mainly clients: APPLE; BCG</li>
+<li>Main clients: APPLE; BCG</li>
 </ul>
 </li>
 </ul>
