--- a/public/about/index.html
+++ b/public/about/index.html
@@ -139,7 +139,7 @@ Ziyan ZOU, &amp;amp; Shuxiang YOU. 2023. How Gender Affects Immigrants Accents v
 <ul>
 <li>
 <p><strong>Research Assistant 05/2022-06/2024</strong></p>
-<p><em>Brain and Mind Institute of Chinese University of Hong Kong</em></p>
+<p><em>Projects: Infants Phonological Acuqisiiton 嬰兒音系發展研究</em></p>
 <p><strong>PI: Prof. Regine Lai</strong></p>
 <ul>
 <li><em>Language Acquisition</em></li>
